--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,11 @@
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
 <!--            </intent-filter>-->
         </activity>
+
+        <activity
+            android:name=".ui.module.ModuleDetailActivity"
+            android:label="Chi tiết Module"
+            android:exported="false" />
     </application>
 
 </manifest>
