Tạo QuizQuestion data class + Quiz generator trong Repository QuizViewModel quản lý tiến trình quiz, điểm số Thiết kế UI Quiz (hiển thị câu hỏi, 4 lựa chọn) Tạo QuizSummaryFragment hiển thị kết quả Lưu điểm quiz vào Room (QuizResultEntity)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
             android:name=".ui.flashcard.FlashcardActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.quiz.QuizActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
