fix bug to move FlashcardSummary

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,12 @@
             android:name=".ui.flashcard.FlashcardActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.flashcard.FlashcardSummaryActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.quiz.QuizActivity"
             android:exported="false" />
+
     </application>
 
 </manifest>
