nav to pronunciation screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
         <activity
             android:name=".ui.quiz.QuizActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.pronunciation.PronunciationActivity"
+            android:exported="false" />
 
         <activity
             android:name=".ui.module.WordListActivity"
