ui create post, post detail

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/Theme.CodeVocab"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <!-- Splash Screen -->
+
+        <!-- Splash set as Launcher -->
         <activity
             android:name=".SplashActivity"
             android:exported="true"
@@ -26,19 +27,22 @@
             </intent-filter>
         </activity>
 
-        <!-- Main Activity -->
+        <activity
+            android:name=".ui.auth.LoginActivity"
+            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.CodeVocab">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            android:label="@string/app_name" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-        </activity>
+        <!-- Auth Flow -->
+        <activity android:name=".ui.auth.RegisterActivity" android:exported="false" />
+        <activity android:name=".ui.auth.ResetPasswordActivity" android:exported="false" />
+        <activity android:name=".ui.auth.ConfirmOtpActivity" android:exported="false" />
+        <activity android:name=".ui.auth.NewPasswordActivity" android:exported="false" />
 
+        <!-- App Features -->
         <activity
             android:name=".ui.module.ModuleDetailActivity"
             android:label="Chi tiết Module"
@@ -50,15 +54,46 @@
             
         <activity
             android:name=".ui.flashcard.FlashcardSummaryActivity"
+            android:label="Kết quả học tập"
             android:exported="false" />
+
         <activity
             android:name=".ui.quiz.QuizActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.quiz.QuizSummaryActivity"
             android:exported="false" />
 
         <activity
             android:name=".ui.module.WordListActivity"
             android:label="Danh sách từ vựng"
             android:exported="false" />
+
+        <activity
+            android:name=".ui.word_detail.WordDetailActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.pronunciation.PronunciationActivity"
+            android:exported="false" />
+
+        <!-- Profile & Settings -->
+        <activity
+            android:name=".ui.theme.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.profile.EditProfileActivity"
+            android:exported="false" />
+
+        <!-- Group Features -->
+        <activity
+            android:name=".ui.group.CommentListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.group.CreatePostActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
