--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:theme="@style/Theme.CodeVocab"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
-        <!-- Splash set as Launcher -->
+        <!-- Splash Screen -->
         <activity
             android:name=".SplashActivity"
             android:exported="true"
@@ -31,10 +30,13 @@
             android:name=".ui.auth.LoginActivity"
             android:exported="false" />
 
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:theme="@style/Theme.CodeVocab">
+        </activity>
 
         <!-- Auth Flow -->
         <activity android:name=".ui.auth.RegisterActivity" android:exported="false" />
@@ -43,6 +45,7 @@
         <activity android:name=".ui.auth.NewPasswordActivity" android:exported="false" />
 
         <!-- App Features -->
+
         <activity
             android:name=".ui.module.ModuleDetailActivity"
             android:label="Chi tiết Module"
@@ -56,13 +59,14 @@
             android:name=".ui.flashcard.FlashcardSummaryActivity"
             android:label="Kết quả học tập"
             android:exported="false" />
-
         <activity
             android:name=".ui.quiz.QuizActivity"
             android:exported="false" />
-
         <activity
             android:name=".ui.quiz.QuizSummaryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.pronunciation.PronunciationActivity"
             android:exported="false" />
 
         <activity
@@ -93,7 +97,6 @@
         <activity
             android:name=".ui.group.CreatePostActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
