quiz summary with api

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
         <activity
             android:name=".ui.flashcard.FlashcardSummaryActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ui.quiz.QuizSummaryActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.quiz.QuizActivity"
             android:exported="false" />
